--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
 remote_theme: chesterhow/tale
-title:          Vórtice
+title:          Lisbon Revsited
 description:    "Cenas"
 
 url:            "https://pablu.github.io/vortice"
 
 # Author
 author:
-  name:         Vórtice
+  name:         Ulises
   url:          https://pablu.github.io/lisbonrevisited
   email:        pablu@protonmail.com
 
